[package]
name = "avy-render"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38.0", features = ["libloading"] }
skia-safe = { version = "0.75.0", features = ["gpu", "vulkan", "svg", "webp", "freetype-woff2", "textlayout"] }
smithay-client-toolkit = { version = "=0.19.2" }
wayland-backend = { version = "0.3.6", features = ["client_system"] }
