[package]
name = "avy-render"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.37.3+1.3.251", features = ["libloading"] }
skia-safe = { version = "0.75.0", features = [
    "gpu",
    "vulkan",
    "svg",
    "webp",
    "freetype-woff2",
    "textlayout",
] }
skia-bindings = { version = "0.75.0" }
smithay-client-toolkit = { version = "=0.19.2" }
wayland-backend = { version = "0.3.6", features = ["client_system"] }
vulkano = "0.34.1"
palette = "=0.7.6"
thiserror = "1.0.63"
